# Headlights-Firmware

./: README.md  dummy.py
common/: Cargo.toml  build.rs  rust-toolchain.toml
common/src/: assign_resources.rs  bundles.rs  command.rs  command_reader.rs  command_writer.rs  commands.rs  fmt.rs  lib.rs  lib.udl  properties.rs  std_serde_impls.rs  types.rs
common/src/command/: commands.rs  mod.rs  reader.rs  writer.rs
common/src/utils/: bundles.rs  mod.rs  thermistor.rs
nrf/: Cargo.toml  dummy.py  rust-toolchain.toml
nrf/.cargo/: config.toml
nrf/src/: ble.rs  bundles.rs  command_ext.rs  command_reader.rs  command_writer.rs  fmt.rs  main.rs  scan_buf.rs  uart.rs
nrf/src/command/: extension.rs  mod.rs  reader.rs  writer.rs
nrf/src/utils/: ble.rs  mod.rs
stm/: Cargo.toml  rust-toolchain.toml
stm/.cargo/: config.toml
stm/src/: commands_ext.rs  fmt.rs  limits.rs  main.rs  pid.rs  uart.rs
stm/src/command/: extension.rs  reader.rs  writer.rs
stm/src/utils/: adc.rs  config.rs  hb.rs  mod.rs  model.rs  regulation.rs  status.rs  thermistor.rs  uart.rs
