[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
defmt = [
    "dep:defmt",
    "pattern/defmt",
    "embedded-io-async/defmt-03",
]

[lib]
crate-type = ["cdylib", "lib"]
name = "common"

[dependencies]
tiny-serde = { git = "https://github.com/AdinAck/tiny-serde", branch = "main" }
tiny-serde-macros = { git = "https://github.com/AdinAck/tiny-serde-macros", branch = "main" }
pattern = { git = "https://github.com/AdinAck/pattern", branch = "main" }
bundle = { git = "https://github.com/AdinAck/bundle", branch = "main" }
embedded-io-async = "0.6.0"
crc = "3.0.1"
heapless = "0.8.0"
defmt = { version = "0.3.5", optional = true }

[target.'cfg(not(target_os = "none"))'.dependencies]
uniffi = "0.25"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }
