[package]
edition = "2021"
name = "nrf"
version = "0.1.0"

[features]
default = [
    "ble-l2cap",
    "ble-gatt-server",
    "ble-gatt-client",
    "ble-sec",
]

defmt = [
    "embassy-nrf/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "nrf-softdevice/defmt",
    "pattern/defmt",
    "common/defmt"
]

ble-l2cap = ["nrf-softdevice/ble-l2cap"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
ble-sec = ["nrf-softdevice/ble-sec"]

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "nightly", "integrated-timers"]}
embassy-sync = { version = "0.2.0" }
embassy-time = { version = "0.1.0", features = ["nightly"]}
embassy-nrf = { version = "0.1.0", features = [ "nightly", "nrf52840", "gpiote", "time-driver-rtc1" ]}
defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features= ["print-defmt"] }
panic-halt = "0.2.0"
nrf-softdevice = { path = "/Users/adinack/Projects/nrf-softdevice/nrf-softdevice", version = "0.1.0", features = ["nightly", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.1" }
heapless = "0.8.0"
tiny-serde = { git = "https://github.com/AdinAck/tiny-serde", branch = "main" }
pattern = { git = "https://github.com/AdinAck/pattern", branch = "main" }
crc = "3.0.1"
common = { path = "../common" }
static_cell = "2.0.0"

[[bin]]
name = "nrf"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "s"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "s"
incremental = true

[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "872f1ec4c2bae370e10366b72e601f64b0008da3" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "872f1ec4c2bae370e10366b72e601f64b0008da3" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "872f1ec4c2bae370e10366b72e601f64b0008da3" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "872f1ec4c2bae370e10366b72e601f64b0008da3" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice", rev = "3f57e8fd39a0312c3667b501c4c8f54e155ae2c1" }
