cargo-features = ["per-package-target"]

[package]
edition = "2021"
name = "stm"
version = "0.1.0"
forced-target = "thumbv6m-none-eabi"

[features]
defmt = [
    "embassy-stm32/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
]

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-sync = { version = "0.2.0" }
embassy-time = { version = "0.1.2", features = ["tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", features = ["nightly", "memory-x", "stm32f031k6", "time-driver-any", "exti", "unstable-pac"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3"
panic-halt = "0.2.0"
heapless = "0.8.0"
static_cell = "2.0.0"
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
num-traits = { version = "0.2.17", default-features = false }
common = { path = "../common" }

[[bin]]
name = "stm"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "s"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "s"
incremental = true

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "5bc75578260f4c644cc060e6458a05d7fc0ffb41" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "5bc75578260f4c644cc060e6458a05d7fc0ffb41" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "5bc75578260f4c644cc060e6458a05d7fc0ffb41" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "5bc75578260f4c644cc060e6458a05d7fc0ffb41" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "5bc75578260f4c644cc060e6458a05d7fc0ffb41" }
