[package]
edition = "2021"
name = "stm"
version = "0.1.0"

[features]
defmt = [
    "embassy-stm32/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "common/defmt"
]

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-sync = { version = "0.2.0" }
embassy-time = { version = "0.1.2", features = ["tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", features = ["nightly", "memory-x", "stm32f031k6", "time-driver-any", "exti", "unstable-pac"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3"
panic-halt = "0.2.0"
heapless = "0.8.0"
static_cell = "2.0.0"
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
common = { path = "../common" }
pid = { git = "https://github.com/AdinAck/pid", branch = "main" }
tiny-serde = { git = "https://github.com/AdinAck/tiny-serde", branch = "main" }
tiny-serde-macros = { git = "https://github.com/AdinAck/tiny-serde-macros", branch = "main" }
embedded-storage = { version = "0.3.0" }
embedded-storage-async = { version = "0.4.0" }

[[bin]]
name = "stm"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "s"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "s"
incremental = true

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "5bc75578260f4c644cc060e6458a05d7fc0ffb41" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "5bc75578260f4c644cc060e6458a05d7fc0ffb41" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "5bc75578260f4c644cc060e6458a05d7fc0ffb41" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "5bc75578260f4c644cc060e6458a05d7fc0ffb41" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "5bc75578260f4c644cc060e6458a05d7fc0ffb41" }
embedded-storage-async = { git = "https://github.com/rust-embedded-community/embedded-storage", rev = "3fddbf775528138554b83ab01cbd3264edfaf8f3" }
embedded-storage = { git = "https://github.com/rust-embedded-community/embedded-storage", rev = "3fddbf775528138554b83ab01cbd3264edfaf8f3" }
